bigmarket repo added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "se2001-21f1001346"]
 	path = se2001-21f1001346
 	url = https://github.com/Shabarish1403/se2001-21f1001346.git
+[submodule "BigMarket-Frontend"]
+	path = BigMarket-Frontend
+	url = https://github.com/Shabarish1403/BigMarket-Frontend
