--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Shabarish1403/se2001-21f1001346.git
 [submodule "BigMarket-Frontend"]
 	path = BigMarket-Frontend
-	url = https://github.com/Shabarish1403/BigMarket-Frontend
+	url = https://github.com/Shabarish1403/BigMarket-Frontend.git
